azure 대신 gemini를 기본으로 변경

--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "azure-openai": "^0.9.4"
+    "@google/generative-ai": "^0.1.2"
   }
 }
